force-app/main/default/objects/AAO_Criterion__c/fields/AAO_Account__c.field-meta.xml
<CustomField>
    <fullName>AAO_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Required on the vendor row even though Opportunity is not, so it is carried here to project.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AAO Criteria</relationshipLabel>
    <relationshipName>AAO_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>