force-app/main/default/objects/AAO_Criterion__c/fields/AAO_Criterion_Key__c.field-meta.xml
<CustomField>
    <fullName>AAO_Criterion_Key__c</fullName>
    <description>Opportunity id plus a content hash of the criterion text, normalized for case and whitespace only. Unique, so the same criterion voiced on three calls is ONE criterion carrying three claims rather than three criteria carrying one each - which is what makes reinforcement countable, since guidance orders a person&apos;s criteria by what they have pressed most recently and most often. Scoped to the opportunity because a criterion is a deal artifact: every one of the 402 rows in production carries an Opportunity despite the schema making it optional.</description>
    <externalId>true</externalId>
    <label>Criterion Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>