force-app/main/default/objects/AAO_Criterion__c/fields/AAO_Evidence_Occurred__c.field-meta.xml
<CustomField>
    <fullName>AAO_Evidence_Occurred__c</fullName>
    <description>When it was first voiced, on the evidence-occurred clock and never the run clock.</description>
    <label>Evidence Occurred</label>
    <type>DateTime</type>
</CustomField>