force-app/main/default/objects/AAO_Criterion__c/fields/AAO_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AAO_Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>AAO_Criteria</relationshipName>
    <relationshipLabel>AAO Criteria</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>