force-app/main/default/objects/AAO_Criterion__c/fields/AAO_Projected_Criterion_Id__c.field-meta.xml
<CustomField>
    <fullName>AAO_Projected_Criterion_Id__c</fullName>
    <description>THE VENDOR ROW THIS PROJECTED INTO, written by the writer at the instant it lands and never reconstructed. It is what stops a second pass writing the criterion again: ALTF__Decision_Criteria__c carries no external id to upsert against, so the only record that we already wrote one is the one we keep. A watermark is written by the writer or it does not exist.</description>
    <label>Projected Criterion Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>