force-app/main/default/objects/AAO_Criterion__c/fields/AAO_Projected_Modstamp__c.field-meta.xml
<CustomField>
    <fullName>AAO_Projected_Modstamp__c</fullName>
    <label>Projected Modstamp</label>
    <type>DateTime</type>
</CustomField>