force-app/main/default/objects/AAO_Criterion__c/fields/AAO_Required__c.field-meta.xml
<CustomField>
    <fullName>AAO_Required__c</fullName>
    <description>Gate language only, and the default is unchecked. Strength of feeling is not a gate. Written from an AAO_DC_R answer on this same criterion. NOTE the standing ruling that travels with it: a criterion never raises a flag, however required the buyer says it is - letting one go red would be the machine deciding what is do-or-die.</description>
    <label>Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>