force-app/main/default/objects/AAO_Criterion__c/fields/AAO_Retired_Because__c.field-meta.xml
<CustomField>
    <fullName>AAO_Retired_Because__c</fullName>
    <description>Why this criterion was retired, required at retirement and never blank. A retirement with no stated reason is indistinguishable from a deletion that happened to leave a row behind. First use: the collapsed placeholder rows minted under the literal text CRITERION before a criterion&apos;s identity was its name.</description>
    <label>Retired Because</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>