force-app/main/default/objects/AAO_Criterion__c/fields/AAO_Source__c.field-meta.xml
<CustomField>
    <fullName>AAO_Source__c</fullName>
    <label>Source</label>
    <type>Lookup</type>
    <referenceTo>AAO_Source__c</referenceTo>
    <relationshipName>AAO_Criteria</relationshipName>
    <relationshipLabel>AAO Criteria</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>