force-app/main/default/objects/AAO_Criterion__c/fields/AAO_Synthetic__c.field-meta.xml
<CustomField>
    <fullName>AAO_Synthetic__c</fullName>
    <label>Synthetic</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>