force-app/main/default/objects/AAO_Criterion__c/fields/AAO_Type__c.field-meta.xml
<CustomField>
    <fullName>AAO_Type__c</fullName>
    <description>Formal or Informal, by PROVENANCE (Matthew&apos;s ruling): organizational standing spoken makes it Formal, else Informal and upgradeable. A naming with no attribution defaults Informal and is not a failure. Written from an AAO_DC_F answer on this same criterion.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formal</fullName>
            </value>
            <value>
                <fullName>Informal</fullName>
                <default>true</default>
                <label>Informal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>