force-app/main/default/objects/AAO_Criterion__c/fields/AAO_Voiced_By__c.field-meta.xml
<CustomField>
    <fullName>AAO_Voiced_By__c</fullName>
    <description>THE OWNER, never the key. Addendum 20: the person stays on the row as owner. The criterion is the subject because a person naming three criteria is three criteria, and keying on the person would collapse them onto one answer - which is the exact defect this ruling closes. The holder junction at projection is written from here, and it is also the citation for that person&apos;s Buyer Role: someone saying it has to integrate with our SAP instance is that person exercising decision authority.</description>
    <label>Voiced By</label>
    <type>Lookup</type>
    <referenceTo>AAO_Participant__c</referenceTo>
    <relationshipName>AAO_Criteria_Voiced</relationshipName>
    <relationshipLabel>AAO Criteria Voiced</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>